--- a/_config.yaml
+++ b/_config.yaml
@@ -1,19 +1,17 @@
 # site properties and page defaults
-title: FilizKokselDESCRIPTION=An engaging 1-3 sentence description of your lab.
-subtitle: 
-description: 
+title: FoodPro lab at the University of Manitoba
+subtitle: Dr. Filiz Koksel
+description: Pioneering in extrusion to create novel food products
 header: images/background.jpg
 footer: images/background.jpg
 proofer: false
 
 # site social media and other links
 links:
-  email: contact@FilizKokselDESCRIPTION=An engaging 1-3 sentence description of your lab..com
-  orcid: 0000-0001-8713-9213
-  google-scholar: ETJoidYAAAAJ
-  github: FilizKokselDESCRIPTION=An engaging 1-3 sentence description of your lab.
-  twitter: FilizKokselDESCRIPTION=An engaging 1-3 sentence description of your lab.
-  youtube: FilizKokselDESCRIPTION=An engaging 1-3 sentence description of your lab.
+  email: filizkoksel@umanitoba.ca
+  orcid: 0000-0002-6277-4314
+  google-scholar: Z0jW8S8AAAAJ
+
 
 ### jekyll settings
 
